Bug 217905 - Missing icon files in accounts and categories view
Summary: Missing icon files in accounts and categories view
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-12-08 19:17 UTC by Thomas Baumgart
Modified: 2009-12-09 20:16 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Baumgart 2009-12-08 19:17:42 UTC
Version:            (using KDE 4.3.4)
OS:                Linux
Installed from:    openSUSE RPMs

The icons for the tax and VAT column are not displayed properly.
Comment 1 Cristian Oneț 2009-12-09 20:16:50 UTC
SVN commit 1060725 by conet:

BUG: 217905

Fixed missing icon files in accounts and categories view. Replaced the "ok" icon with the "dialog-ok" icon.

 M  +1 -1      kmymoneyaccounttree.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1060725