BUG: 217905

Fixed missing icon files in accounts and categories view. Replaced the "ok" icon with the "dialog-ok" icon.

svn path=/trunk/playground/office/kmymoney/; revision=1060725